--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
-
+	p{
+		display: inline;
+		font-size: 45%;
+		font-family: "Times New Roman", Georgia, Serif;
+		font-style:bold;
+	}
 }
